--- a/example.env
+++ b/example.env
@@ -1,7 +1,7 @@
-REACT_APP_API_KEY="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-REACT_APP_AUTH_DOMAIN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-REACT_APP_PROJECT_ID= "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-REACT_APP_STORAGE_BUCKET= "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-REACT_APP_MESSIGING_SENDER_ID= "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-REACT_APP_APP_ID= "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-REACT_APP_MEASUREMENT_ID= "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+FIREBASE_APP_API_KEY="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+FIREBASE_AUTH_DOMAIN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+FIREBASE_PROJECT_ID= "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+FIREBASE_STORAGE_BUCKET= "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+FIREBASE_MESSIGING_SENDER_ID= "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+FIREBASE= "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+FIREBASE= "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
